--- a/e/el/elp/elpasotexas.gov.html
+++ b/e/el/elp/elpasotexas.gov.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the elpasotexas.gov privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606053734id_/http%3A//www.elpasotexas.gov/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the elpasotexas.gov privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204170147id_/http%3A//www.elpasotexas.gov/privacy.asp) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html language="en"><head>
 <title>www.elpasotexas.gov - Privacy Policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 
@@ -33,16 +33,17 @@ function MM_swapImage() { //v3.0
 </script>
 
 
-			<link rel="stylesheet" type="text/css" href="_include/website.css">
+			<link rel="stylesheet" type="text/css" href="http://www.elpasotexas.gov/_include/website.css">
 		
 
 </head>
 
-<body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onload="MM_preloadImages('_images/button_virtual_33_over.jpg','_images/button_jobs_33_over.jpg','_images/button_news_33_over.jpg','_images/button_calendar_33_over.jpg','_images/button_video_33_over.jpg','_images/button_forms_33_over.jpg','_images/button_commuter_33_over.jpg','_images/button_faq_33_over.jpg','_template1/pasotexas_33_over.jpg','_template1/sitemap_33_over.jpg','_template1/search_33_over.jpg','_template1/homepage_33_over.jpg','_template1/mayor_33_over.jpg','_template1/directory_33_over.jpg','_template1/business_33_over.jpg','_template1/residents_33_over.jpg','_template1/visitors_33_over.jpg')">
+<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onload="MM_preloadImages('_images/button_virtual_33_over.jpg','_images/button_jobs_33_over.jpg','_images/button_news_33_over.jpg','_images/button_calendar_33_over.jpg','_images/button_video_33_over.jpg','_images/button_forms_33_over.jpg','_images/button_commuter_33_over.jpg','_images/button_faq_33_over.jpg','_template1/pasotexas_33_over.jpg','_template1/sitemap_33_over.jpg','_template1/search_33_over.jpg','_template1/homepage_33_over.jpg','_template1/mayor_33_over.jpg','_template1/directory_33_over.jpg','_template1/business_33_over.jpg','_template1/residents_33_over.jpg','_template1/visitors_33_over.jpg')">
 
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr>
-    <td nowrap="" align="right" bgcolor="316E9D" width="100%"><a href="https://my.elpasotexas.gov/portal/servlet/portal" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('pasotexas','','http://www.elpasotexas.gov/_template1/pasotexas_33_over.jpg',1)"><img src="http://www.elpasotexas.gov/_template1/pasotexas_33.jpg" alt="My elpasotexas.gov" name="pasotexas" width="221" height="24" border="0"></a><a href="http://www.elpasotexas.gov/sitemap.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Sitemap','','http://www.elpasotexas.gov/_template1/sitemap_33_over.jpg',1)"><img src="http://www.elpasotexas.gov/_template1/sitemap_33.jpg" alt="Site Map" name="Sitemap" width="102" height="24" border="0"></a><a href="http://www.elpasotexas.gov/search/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Search','','http://www.elpasotexas.gov/_template1/search_33_over.jpg',1)"><img src="http://www.elpasotexas.gov/_template1/search_33.jpg" alt="Search" name="Search" width="89" height="24" border="0"></a></td>
+    <td nowrap="" align="left" bgcolor="316E9D"><a href="#content_start"><img src="http://www.elpasotexas.gov/_images/transparent_dot.gif" width="1" height="1" border="0" alt="Skip Navigation"></a><a href="http://www.elpasotexas.gov/default.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('URL','','http://www.elpasotexas.gov/_template1/url_over.jpg',1)"><img src="http://www.elpasotexas.gov/_template1/url.jpg" alt="www.elpasotexas.gov" name="URL" width="221" height="24" border="0"></a></td>    
+    <td nowrap="" align="right" bgcolor="316E9D" width="100%"><a href="#content_start"><img src="http://www.elpasotexas.gov/_images/transparent_dot.gif" width="1" height="1" border="0" alt="Skip Navigation"></a><a href="https://my.elpasotexas.gov/portal/servlet/portal" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('pasotexas','','http://www.elpasotexas.gov/_template1/pasotexas_33_over.jpg',1)"><img src="http://www.elpasotexas.gov/_template1/pasotexas_33.jpg" alt="My elpasotexas.gov" name="pasotexas" width="221" height="24" border="0"></a><a href="http://www.elpasotexas.gov/sitemap.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Sitemap','','http://www.elpasotexas.gov/_template1/sitemap_33_over.jpg',1)"><img src="http://www.elpasotexas.gov/_template1/sitemap_33.jpg" alt="Site Map" name="Sitemap" width="102" height="24" border="0"></a><a href="http://www.elpasotexas.gov/search/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Search','','http://www.elpasotexas.gov/_template1/search_33_over.jpg',1)"><img src="http://www.elpasotexas.gov/_template1/search_33.jpg" alt="Search" name="Search" width="89" height="24" border="0"></a></td>
   </tr>
 </tbody></table>
 
@@ -53,10 +54,10 @@ function MM_swapImage() { //v3.0
                  <td nowrap="" align="left" width="8%" height="78" bordercolorlight="#316e9d" bordercolordark="#316e9d"><a href="http://www.elpasotexas.gov/default.asp"><img src="http://www.elpasotexas.gov/_template1/eplogogif4.gif" alt="El Paso logo" border="0" width="128" height="43"></a></td>
 			
 
-		<td nowrap="" align="right" valign="top" width="92%" background="http://www.elpasotexas.gov/_template1/ep_banner6.jpg" border="0" height="78">
-			<table width="100%" border="0" height="116%" cellspacing="0" cellpadding="2" style="BORDER-COLLAPSE: collapse" bordercolor="#111111">
+		<td nowrap="" align="right" valign="top" width="92%" border="0" height="78" background="http://www.elpasotexas.gov/_template/ep_banner6.jpg">
+			<table width="100%" border="0" height="78" cellspacing="0" cellpadding="2" style="BORDER-COLLAPSE: collapse" bordercolor="#111111">
 				<tbody><tr align="left" valign="top">
-					<td width="100%" height="116%" background="http://www.elpasotexas.gov/_template1/ep_banner6.jpg"></td>
+					<td width="100%" height="78"></td>
 				</tr>
 			</tbody></table>
 		</td>
@@ -68,7 +69,7 @@ function MM_swapImage() { //v3.0
 
 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="BORDER-COLLAPSE: collapse" id="Table4">
 	<tbody><tr>
-    <td nowrap="" align="right" bgcolor="#578cc8"><a href="http://www.elpasotexas.gov/default.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Homepage','','http://www.elpasotexas.gov/_template1/homepage_33_over.jpg',1)"><img name="Homepage" border="0" src="http://www.elpasotexas.gov/_template1/homepage_33.jpg" alt="City Homepage"></a><a href="http://www.elpasotexas.gov/mayor/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Mayor','','http://www.elpasotexas.gov/_template1/mayor_33_over.jpg',1)"><img name="Mayor" border="0" src="http://www.elpasotexas.gov/_template1/mayor_33.jpg" alt="Mayor's Office"></a><a href="http://www.elpasotexas.gov/directory.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Directory','','http://www.elpasotexas.gov/_template1/directory_33_over.jpg',1)"><img src="http://www.elpasotexas.gov/_template1/directory_33.jpg" alt="Directory" name="Directory" width="82" height="26" border="0"></a> 
+<td nowrap="" align="right" bgcolor="#578cc8"><a href="http://www.elpasotexas.gov/default.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Homepage','','http://www.elpasotexas.gov/_template1/homepage_33_over.jpg',1)"><img name="Homepage" border="0" src="http://www.elpasotexas.gov/_template1/homepage_33.jpg" alt="City Homepage"></a><a href="http://www.elpasotexas.gov/mayor/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Mayor','','http://www.elpasotexas.gov/_template1/mayor_33_over.jpg',1)"><img name="Mayor" border="0" src="http://www.elpasotexas.gov/_template1/mayor_33.jpg" alt="Mayor's Office"></a><a href="http://www.elpasotexas.gov/directory.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Directory','','http://www.elpasotexas.gov/_template1/directory_33_over.jpg',1)"><img src="http://www.elpasotexas.gov/_template1/directory_33.jpg" alt="Directory" name="Directory" width="82" height="26" border="0"></a> 
       <a href="http://www.elpasotexas.gov/business.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Business','','http://www.elpasotexas.gov/_template1/business_33_over.jpg',1)"><img name="Business" border="0" src="http://www.elpasotexas.gov/_template1/business_33.jpg" alt="Business"></a><a href="http://www.elpasotexas.gov/residents.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Residents','','http://www.elpasotexas.gov/_template1/residents_33_over.jpg',1)"><img name="Residents" border="0" src="http://www.elpasotexas.gov/_template1/residents_33.jpg" alt="Residents"></a><a href="http://www.elpasotexas.gov/visitelpasotexas/default.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Visitors','','http://www.elpasotexas.gov/_template1/visitors_33_over.jpg',1)"><img name="Visitors" border="0" src="http://www.elpasotexas.gov/_template1/visitors_33.jpg" alt="Visitors"></a></td>
 	</tr>
 </tbody></table>
@@ -77,7 +78,7 @@ function MM_swapImage() { //v3.0
 
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr>
-    <td><img src="http://www.elpasotexas.gov/_template1/bef_title_h.jpg" alt="title" width="257" height="28"></td>
+    <td><img src="http://www.elpasotexas.gov/_template1/bef_title_h.jpg" alt="" width="257" height="28"></td>
     <td background="http://www.elpasotexas.gov/_template1/back_title_h.jpg" width="98%" align="right" valign="top">&nbsp;</td>
     <td background="http://www.elpasotexas.gov/_template1/back_title_h.jpg" width="2%" align="right">&nbsp;</td>
   </tr>
@@ -89,6 +90,7 @@ function MM_swapImage() { //v3.0
     <td width="1%">&nbsp;</td>
     <td width="98%">
 	<p>
+	<a name="content_start"></a>
 
 <br>
 			
@@ -97,7 +99,7 @@ function MM_swapImage() { //v3.0
           <td width="100%" colspan="4">&nbsp;</td>
         </tr>
         <tr> 
-          <td width="10%" valign="top"> <img src="_images/citylogo_seal.jpg" align="top"></td>
+          <td width="10%" valign="top"> <img src="_images/citylogo_seal.jpg" alt="City of El Paso Seal " align="top"></td>
           <td width="90%" colspan="3" rowspan="2"> 
           <p>The Information Technology Department (IT) of the CITY OF EL PASO 
             maintains the CITY OF EL PASO website as a public service. The following 
@@ -204,7 +206,7 @@ function MM_swapImage() { //v3.0
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr>
           <td align="center"> | <a href="http://www.elpasotexas.gov/disclaimer.asp">Disclaimer</a> 
-            | <a href="http://www.elpasotexas.gov/privacy.asp">Privacy Policy</a> | <a href="http://www.elpasotexas.gov/accessibility.asp">Accessibility</a> | <a href="http://www.elpasotexas.gov/link_policy.asp">Link Policy</a> | <a href="http://www.elpasotexas.gov/contact_us.asp">Contact Us</a> |<br>
+            | <a href="http://www.elpasotexas.gov/privacy.asp">Privacy Policy</a> | <a href="http://www.elpasotexas.gov/accessibility.asp">Accessibility</a> | <a href="http://www.elpasotexas.gov/link_policy.asp">Link Policy</a> | <a href="http://www.elpasotexas.gov/plugins.asp">Tools</a> | <a href="http://www.elpasotexas.gov/contact_us.asp">Contact Us</a> | <a href="http://www.elpasotexas.gov/security_policy.asp">Security Policy</a> |<br>
              <a href="http://www.elpasotexas.gov/disclaimer.asp#copyright">© 2004 City of El Paso</a> 	
           </td>
   </tr>
