--- a/d/d2/d2g/d2g.com.html
+++ b/d/d2/d2g/d2g.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the d2g.com privacy policy that was archived on 2003-06-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20030601080856id_/http%3A//www.deerfield.com/corporate/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the d2g.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204170722id_/http%3A//www.deerfield.com/corporate/privacy) for the most accurate reproduction.-->
 
 <html><head>
 
-<title>Deerfield.com Privacy Statement</title>
-<meta name="keywords" content="Deerfield.com">
-<meta name="description" content="Deerfield.com">
+<title>privacy statement from Deerfield.com</title>
+<meta name="keywords" content="mail server, dynamic dns, internet sharing, web mail server, anti spam, email management, computer virus protection, webmail server, groupware, shared calendaring, calendaring, collaboration software, workgroup, spam email blocker, antispam, antivirus, computer protection, computer virus protection software, email server, smtp mail server, antivirus protection, email content filtering, anti spam, spam blocker, spam filtering, web mail, webmail, pop3, imap, ldap, web server, antivirus protection software, email filtering software, spam email blocker software, email content filtering software, dynamic dns software, webmail server software, modem sharing software, download modem sharing software, internet connection sharing, internet connection sharing download, smtp mail server program, rss aggregators, rss aggregator, content filtering software, content filtering, download software.">
+<meta name="description" content="privacy statement from Deerfield.com - offering computer software solutions including mail server, dynamic dns, internet sharing, web mail server, anti spam, email management, computer virus protection, collaboration software.">
 <meta name="MSSmartTagsPreventParsing" content="TRUE">
 
 
@@ -31,7 +31,9 @@
 <a name="toplist">
 <table align="left" width="100%" cellspacing="0" cellpadding="0" border="0">
 <tbody><tr>
-    <td width="100%" align="LEFT" background="http://www.deerfield.com/images/shell_dci_bgtop.gif"><a href="http://www.deerfield.com/"><img src="http://www.deerfield.com/images/shell_dci_dcilogo.gif" width="200" height="53" alt="" border="0"></a></td>
+    <td width="100%" align="LEFT" background="http://www.deerfield.com/images/shell_dci_bgtop.gif"><a href="http://www.deerfield.com/"><img src="http://www.deerfield.com/images/shell_dci_dcilogo.gif" width="200" height="53" alt="" border="0"></a>
+		<span style="margin-left:370px"><img src="http://www.deerfield.com/images/shell_dci_visneticlogo.gif" border="0"></span>
+	</td>
 </tr>
 
 <tr>
@@ -86,12 +88,11 @@
 	<a class="navtopitem" id="navtopitem" href="http://shop.deerfield.com/cart/">Buy Now</a>
 	</td>
 	
-	<td class="divider">|</td>
-	
-<td valign="BOTTOM">
-<style type="text/css"><!-- #surveyDiv {position:absolute; height:1; width:1; top:0; left:0;} --></style><script language="JavaScript" src="http://chat.deerfield.com/web/admin/surveys.php?base_url=http://chat.deerfield.com"></script><a href="http://www.deerfield.com"></a><script language="JavaScript" src="http://chat.deerfield.com/js/status_image.php?base_url=http://chat.deerfield.com&amp;l=admin&amp;x=1&amp;deptid=0&amp;btn=1"></script><div id="surveyDiv" style="visibility:hidden"></div>
-</td>
+	<td class="divider"><a href="http://shop.deerfield.com/purchase/index.aspx"><img src="http://www.deerfield.com/images/shoppingcart.gif" alt="" border="0"></a></td>
 
+	<td valign="BOTTOM">
+		<a href="http://www.deerfield.com/livechat.htm"><img border="0" src="http://www.deerfield.com/images/chaticon.gif"></a>							
+	</td>
 	</tr></tbody></table></td>
 	
   </tr>
@@ -137,6 +138,14 @@
 	
 	<!-- begin body -->
 	
+
+
+
+
+
+
+
+
 
 
 <table width="770" border="0" cellspacing="0" cellpadding="0" align="left">
@@ -326,6 +335,7 @@
 		<tbody><tr>
 		    <td width="12" align="left" valign="top"><img src="http://www.deerfield.com/images/nav_dci_arrow.gif" width="10" height="9" alt="" border="0">&nbsp;</td>
 		    <td class="default">
+			
 			<a href="http://www.deerfield.com/corporate/presskits/DNS2Go/" target="_new" id="link">DNS2Go</a>
 			</td>
 		</tr>
@@ -335,7 +345,8 @@
 		<tbody><tr>
 		    <td width="12" align="left" valign="top"><img src="http://www.deerfield.com/images/nav_dci_arrow.gif" width="10" height="9" alt="" border="0">&nbsp;</td>
 		    <td class="default">
-			<a href="http://www.deerfield.com/corporate/presskits/VisNetic_ActiveDefense/" target="_new" id="link">VisNetic ActiveDefense</a>
+			
+			<a href="http://www.deerfield.com/corporate/presskits/HFNetChkPro/" target="_new" id="link">Shavlik HFNetChkPro</a>
 			</td>
 		</tr>
 		</tbody></table>
@@ -344,7 +355,8 @@
 		<tbody><tr>
 		    <td width="12" align="left" valign="top"><img src="http://www.deerfield.com/images/nav_dci_arrow.gif" width="10" height="9" alt="" border="0">&nbsp;</td>
 		    <td class="default">
-			<a href="http://www.deerfield.com/corporate/presskits/VisNetic_FTPServer/" target="_new" id="link">VisNetic FTPServer</a>
+			
+			<a href="http://www.deerfield.com/corporate/presskits/VisNetic-MailFlow/" target="_new" id="link">VisNetic MailFlow</a>
 			</td>
 		</tr>
 		</tbody></table>
@@ -353,7 +365,8 @@
 		<tbody><tr>
 		    <td width="12" align="left" valign="top"><img src="http://www.deerfield.com/images/nav_dci_arrow.gif" width="10" height="9" alt="" border="0">&nbsp;</td>
 		    <td class="default">
-			<a href="http://www.deerfield.com/corporate/presskits/VisNetic_MailFlow/" target="_new" id="link">VisNetic MailFlow</a>
+			
+			<a href="http://www.deerfield.com/corporate/presskits/VisNetic-MailServer/" target="_new" id="link">VisNetic MailServer</a>
 			</td>
 		</tr>
 		</tbody></table>
@@ -362,25 +375,8 @@
 		<tbody><tr>
 		    <td width="12" align="left" valign="top"><img src="http://www.deerfield.com/images/nav_dci_arrow.gif" width="10" height="9" alt="" border="0">&nbsp;</td>
 		    <td class="default">
-			<a href="http://www.deerfield.com/corporate/presskits/VisNetic_MailServer/" target="_new" id="link">VisNetic MailServer</a>
-			</td>
-		</tr>
-		</tbody></table>
-	
-		<table cellspacing="0" cellpadding="0" border="0">
-		<tbody><tr>
-		    <td width="12" align="left" valign="top"><img src="http://www.deerfield.com/images/nav_dci_arrow.gif" width="10" height="9" alt="" border="0">&nbsp;</td>
-		    <td class="default">
-			<a href="http://www.deerfield.com/corporate/presskits/WinGate/" target="_new" id="link">WinGate</a>
-			</td>
-		</tr>
-		</tbody></table>
-	
-		<table cellspacing="0" cellpadding="0" border="0">
-		<tbody><tr>
-		    <td width="12" align="left" valign="top"><img src="http://www.deerfield.com/images/nav_dci_arrow.gif" width="10" height="9" alt="" border="0">&nbsp;</td>
-		    <td class="default">
-			<a href="http://www.deerfield.com/corporate/presskits/WinGate_VPN/" target="_new" id="link">WinGate VPN</a>
+			
+			<a href="http://www.deerfield.com/corporate/presskits/WinRoute-Firewall/" target="_new" id="link">WinRoute Firewall</a>
 			</td>
 		</tr>
 		</tbody></table>
@@ -410,6 +406,10 @@
 </tr>
 <tr>
     <td valign="top"><img src="http://www.deerfield.com/images/nav_dci_box.gif" width="7" height="7" alt="" border="0">&nbsp;&nbsp;</td>
+    <td class="default"><a id="link" href="http://www.deerfield.com/corporate/legal/">Legal Notice</a></td>
+</tr>
+<tr>
+    <td valign="top"><img src="http://www.deerfield.com/images/nav_dci_box.gif" width="7" height="7" alt="" border="0">&nbsp;&nbsp;</td>
     <td class="default"><a id="link" href="http://www.deerfield.com/support/contact/">Contact Us</a></td>
 </tr>
 <tr>
@@ -424,12 +424,18 @@
     <td valign="top"><img src="http://www.deerfield.com/images/nav_dci_box.gif" width="7" height="7" alt="" border="0">&nbsp;&nbsp;</td>
     <td class="default"><a id="link" href="http://www.deerfield.com/corporate/resellers/authorsInfo.htm">Developer Alliances</a></td>
 </tr>
-
+<tr>
+    <td valign="top"><img src="http://www.deerfield.com/images/nav_dci_box.gif" width="7" height="7" alt="" border="0">&nbsp;&nbsp;</td>
+    <td class="default"><a id="link" href="http://www.deerfield.com/corporate/resellers/archivesite.htm">Archive Sites</a></td>
+</tr>
 
 
 </tbody></table>
 <br>
 </div>
+
+
+
 
 
 	
@@ -475,20 +481,30 @@
 	<td>
 	<a class="navbotitem" id="navbotitem" href="http://www.deerfield.com/corporate/">Corporate</a>
 	</td>
-
 	
-   	<td class="divider">|</td>
-	
-
+	<td class="divider">|</td>
    	<td>
-	<a class="navbotitem" id="navbotitem" href="http://www.deerfield.com/corporate/resellers/resellerInfo.htm">Reseller Information</a>
+	<a class="navbotitem" id="navbotitem" href="http://www.deerfield.com/corporate/privacy/">Privacy</a>
 	</td>
 	
    	<td class="divider">|</td>
 	
-	   	<td>
-	<a class="navbotitem" id="navbotitem" href="http://shop.deerfield.com/resellers/">Reseller Login</a>
+
+   		<td>
+	<a class="navbotitem" id="navbotitem" href="http://www.deerfield.com/corporate/resellers/">Find a Partner</a>
 	</td>
+
+	<td class="divider">|</td>
+	
+   	  	<td>
+	<a class="navbotitem" id="navbotitem" href="http://shop.deerfield.com/resellers/">Partner Login</a>
+	</td>
+	
+   	<td class="divider">|</td>
+	<td>
+	<a class="navbotitem" id="navbotitem" href="http://www.deerfield.com/corporate/resellers/intro.htm">Become a Partner</a>
+	</td>	
+	 
 	
    	<td class="divider">|</td>
 	
@@ -501,15 +517,16 @@
 	<a class="navbotitem" id="navbotitem" href="http://www.deerfield.com/corporate/presskits/">Press Kits</a>
 	</td>
 
-   	<td class="divider">|</td>
-   	   	<td>
-	<a class="navbotitem" id="navbotitem" href="http://www.deerfield.com/corporate/privacy/">Privacy Statement</a>
-	</td>
-	
-   	<td class="divider">|</td>
+	<td class="divider">|</td>
 	
    	<td>
-	<a class="navbotitem" id="navbotitem" href="http://www.deerfield.com/corporate/legal/">Legal Notices</a>
+	<a class="navbotitem" id="navbotitem" href="http://www.deerfield.com/corporate/blogs/">Blogs</a>
+	</td>
+	
+	<td class="divider">|</td>
+	
+   	<td>
+	<a class="navbotitem" id="navbotitem" href="http://www.deerfield.com/sitemap.htm">Site Map</a>
 	</td>
 	
 	</tr></tbody></table></td>
@@ -521,6 +538,10 @@
 
  </td>
 </tr>
+
+
+
+
 
 <tr>
     <td bgcolor="White" width="100%"><img src="http://www.deerfield.com/images/shell_dci_bottomgap.gif" width="1" height="1" alt="" border="0"></td>
@@ -534,7 +555,7 @@
 
 <tr>
 	<td>
-<div class="footer" align="center" style="width: 770px;"><br>Copyright © 2003 Deerfield.com, All Rights Reserved
+<div class="footer" align="center" style="width: 770px;"><br>Copyright © 2004 Deerfield.com, All Rights Reserved
 <br>
 
 </div>
@@ -542,6 +563,17 @@
 </tr>
 </tbody></table>
 <br clear="ALL">
+
+
+
+
+
+
+
+
+
+
+
 
 
 
