--- a/s/sw/swa/swabiz.com.html
+++ b/s/sw/swa/swabiz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the swabiz.com privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604204319id_/http%3A//swabiz.com/travel_center/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the swabiz.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204172758id_/http%3A//www.swabiz.com/travel_center/privacy_policy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Southwest Airlines Privacy Policy</title>
@@ -74,16 +74,81 @@
 
 <h2><font face="Arial,sans-serif">southwest.com Privacy Policy </font></h2>
 
-<p><font face="Arial,sans-serif" size="2">Southwest Airlines is concerned about your right to privacy. When you visit the Southwest Airlines web site, you can be assured that any information you share with us will be treated confidentially.  The only instances that would require us to disclose Customer information (i.e. - name, address, telephone number, e-mail address, etc.) is under legal subpoena, to verify billing information with the Customer's financial institution, credit card fraud detection, or when a Customer purchases service from a travel service provider (i.e hotel, rental car company, etc.) that is accessible through <b>southwest.com</b>.</font></p>
-
+<p><font face="Arial,sans-serif" size="2">Southwest Airlines is concerned about your right to privacy. When you visit the Southwest Airlines web site, you can be assured that any information you provide to us will be handled carefully. We will never sell or rent your information to <b>any</b> third party.</font></p>
+<hr noshade="" size="1">
+<h4><font face="Arial, Helvetica, sans-serif"> Sharing of Information</font></h4>
+<font size="2" face="Arial, Helvetica, sans-serif"><ol>
+   <li><b><font size="2" face="Arial, Helvetica, sans-serif">Sensitive Information</font></b>: <br>
+      <br>
+   Your credit card information, date of birth, e-mail address, and social security number <b>will not</b> be shared with any third parties except:</li>
+</ol></font>
+<ul>
+   <ul>
+      <li><font size="2" face="Arial, Helvetica, sans-serif">Under legal subpoena</font></li>
+      <li><font size="2" face="Arial, Helvetica, sans-serif">To verify billing information with the Customer's financial institution</font></li>
+      <li><font size="2" face="Arial, Helvetica, sans-serif">For credit card fraud detection</font></li>
+      <li><font size="2" face="Arial, Helvetica, sans-serif">To complete  a transaction when a Customer purchases service from a travel service provider (i.e hotel, rental car company, cruise line, theme park, etc.) that is accessible through <b>southwest.com</b>.</font></li>
+   </ul>
+</ul>
+<font size="2" face="Arial, Helvetica, sans-serif">
+<ol start="2">
+<li><b>Other Information</b>: <br>
+   <br>
+   We may share  other limited information about you with our Rapid Rewards Preferred Partners, under confidentiality agreements, so that they may offer special travel-related promotions to you.</li>
+</ol></font>
 <hr noshade="" size="1">
 
 <h4><font face="Arial,sans-serif">E-mail Addresses</font></h4>
 
-<p><font face="Arial,sans-serif" size="2">The e-mail addresses provided to subscribe to Southwest Airlines e-mail updates <b>will not</b> be shared with any third parties. If you wish to subscribe or unsubscribe from this mailing list or need more information about the mailing list, please go to the <a href="/email/">E-mail Updates</a>
-page.</font></p>
-
-<hr noshade="" size="1">
+<p><font face="Arial,sans-serif" size="2">E-mail addresses provided during a transaction on <b>southwest.com</b> will only be shared with a third party as described in item 1 above. </font></p>
+<p><font face="Arial,sans-serif" size="2">E-mail addresses provided to subscribe to Southwest Airlines e-mail updates <b>will not</b> be shared with any third parties, except under legal subpoena. </font><font face="Arial,sans-serif" size="2">If you wish to subscribe or unsubscribe from our mailing lists or need more information about the mailing list, please refer to the table below.</font></p>
+<table width="100%" border="0" cellpadding="5" cellspacing="1">
+   <tbody><tr bgcolor="#cccccc">
+      <td width="25%"><b><font size="2" face="Arial, Helvetica, sans-serif">E-mails</font></b></td>
+      <td width="35%"><font size="2" face="Arial, Helvetica, sans-serif"><b>Description</b></font></td>
+      <td width="20%"><b><font size="2" face="Arial, Helvetica, sans-serif"> Subscribe</font></b></td>
+      <td width="20%"><b><font size="2" face="Arial, Helvetica, sans-serif"> Unsubscribe</font></b></td>
+   </tr>
+   <tr valign="top" bgcolor="#f0f0f0">
+      <td><font size="2" face="Arial, Helvetica, sans-serif">Click 'n Save E-mail Updates</font></td>
+      <td width="30%"><font size="2" face="Arial, Helvetica, sans-serif">Weekly updates 
+      on 
+      special offers and promotions.</font></td>
+      <td><font size="2" face="Arial, Helvetica, sans-serif"><a href="/email/">Subscribe</a></font></td>
+      <td><font size="2" face="Arial, Helvetica, sans-serif"><a href="/email/emailUnsubscribe.html">Unsubscribe</a></font></td>
+   </tr>
+   <tr valign="top" bgcolor="#e0e0e0">
+      <td><font size="2" face="Arial, Helvetica, sans-serif">Rapid Rewards E-mail Updates</font></td>
+      <td width="30%"><font size="2" face="Arial, Helvetica, sans-serif">  Rapid Rewards  
+         news 
+      and offers.</font></td>
+      <td><font size="2" face="Arial, Helvetica, sans-serif"><a href="/rapid_rewards/rremail/rremailSubscribe.html">Subscribe</a></font></td>
+      <td><font size="2" face="Arial, Helvetica, sans-serif"><a href="/rapid_rewards/rremail/rremailUnsubscribe.html">Unsubscribe</a></font></td>
+   </tr>
+   <tr valign="top" bgcolor="#f0f0f0">
+      <td><font size="2" face="Arial, Helvetica, sans-serif">SWABIZ Corporate Travel Manager 
+      E-mail Updates</font></td>
+      <td width="30%"><p><font size="2" face="Arial, Helvetica, sans-serif">News related to SWABIZ, 
+Southwest's Business Travel 
+web site</font>. <font size="2" face="Arial, Helvetica, sans-serif">
+For registered Corporate 
+Travel 
+Managers
+</font><font size="2" face="Arial, Helvetica, sans-serif">only.</font></p>
+      </td>
+      <td><font size="2" face="Arial, Helvetica, sans-serif"><a href="http://www.swabiz.com/findAmm.html">Contact your Area 
+      Marketing Manager.</a></font></td>
+      <td><font size="2" face="Arial, Helvetica, sans-serif"><a href="http://www.swabiz.com/findAmm.html">Contact your Area 
+Marketing Manager.</a></font></td>
+   </tr>
+   <tr valign="top" bgcolor="#e0e0e0">
+      <td><font size="2" face="Arial, Helvetica, sans-serif">SWAMEDIA and Investor Relations E-mail Alerts</font></td>
+      <td width="30%"><font size="2" face="Arial, Helvetica, sans-serif">Southwest Airlines news releases and investor information.</font></td>
+      <td><font size="2" face="Arial, Helvetica, sans-serif"><a href="/investor_relations/fs_email_alerts.html">Subscribe</a></font></td>
+      <td><font size="2" face="Arial, Helvetica, sans-serif"><a href="/investor_relations/fs_email_alerts.html">Unsubscribe</a></font></td>
+   </tr>
+</tbody></table>
+	<p></p><hr noshade="" size="1"><p></p>
 
 <h4><font face="Arial">Billing Information for Travel service providers</font></h4>
 
@@ -104,15 +169,9 @@ that you won't have to retype it.</font></p>
 <p><font face="Arial" size="2">The address and passenger information is saved to your hard
 drive by the Southwest Airlines web server. This information can only be accessed by the
 Southwest Airlines web server; Internet users and other companies cannot access this
-information. For security reasons, your credit card number is not saved. You must type the
-credit card number each time you purchase travel using Ticketless Travel Online.</font></p>
+information. Unless you have created a Traveler Account, your credit card number will not be saved, and you must type it in each time you purchase travel using Ticketless Travel Online (please see <a href="#traveler_account">Traveler Accounts</a> for details on saving credit card information on our web site).</font></p>
 
-<p><font face="Arial" size="2">We also utilize cookies to track the effectiveness of
-online advertising.&nbsp; This information is treated confidentially and <strong>will not</strong>
-be shared with anyone outside of Southwest Airlines.&nbsp; Southwest Airlines will only
-use this information to make informed decisions in regard to the purchase of online
-advertising.&nbsp; This enables Southwest Airlines to maintain low costs and low fares for
-you, our Customers.</font></p>
+<p><font size="2" face="Arial, Helvetica, sans-serif">We also utilize cookies to track the effectiveness of our online advertising. The information contained in the cookies contains no individually identifiable data, will be treated as confidential information of Southwest Airlines, and will only be used to make informed decisions regarding the performance of our online advertising initiatives. In short, these efforts help Southwest Airlines to maintain low costs and low fares for you, our Customers. </font></p>
 
 <p><font face="Arial" size="2">The "help" portion of the toolbar on most
 browsers will tell you how to prevent your browser from accepting new cookies, how to have
@@ -125,7 +184,7 @@ altogether. </font></p>
 
 <h4><font face="Arial,sans-serif">Security</font></h4>
 
-<p><font face="Arial,sans-serif" size="2">We use the Netscape Secure Commerce Server to
+<p><font face="Arial,sans-serif" size="2"> We use Network Security Services (NSS)  to
 protect your billing information. Secure Sockets Layer (SSL) encrypts information and
 keeps the data private and confidential between your machine and Southwest Airlines. This
 technology makes it safe to transmit your credit card number over the Internet.</font></p>
@@ -135,9 +194,9 @@ technology makes it safe to transmit your credit card number over the Internet.<
 and bottom status bar of your browser in Netscape (or in the bottom status bar only in
 Internet Explorer).</font></p>
 
-<p><img src="/traveler_info/images/netscape_secure.gif" width="468" height="67" alt="Two Security Icons"></p>
+<p><img src="/images/travel_center/netscape_secure.gif" width="468" height="67" alt="Two Security Icons"></p>
 
-<p><img src="/traveler_info/images/lock2.gif" width="159" height="60" alt="Lock in Bottom Status Bar"></p>
+<p><img src="/images/travel_center/lock2.gif" width="159" height="60" alt="Lock in Bottom Status Bar"></p>
 
 <hr noshade="" size="1">
 
@@ -149,7 +208,14 @@ Airlines will not be responsible for any lost, stolen, or otherwise disclosed pa
 Additionally, Southwest Airlines will not replace or reinstate any flight credits, partner
 credits, or program awards that are generated or redeemed by unauthorized password
 activity. Accordingly, your password should be guarded and not provided to anyone.</font></p>
-
+<hr noshade="" size="1">
+<h4><font face="Arial, Helvetica, sans-serif"><a name="traveler_account"></a>Traveler Accounts</font></h4>
+<p><font size="2" face="Arial, Helvetica, sans-serif">If you choose to create a Traveler Account on <b>southwest.com</b> or swabiz.com, you have the option to save information such as:</font></p>
+<ul>
+   <li><font size="2" face="Arial, Helvetica, sans-serif">Travel preferences</font></li>
+   <li><font size="2" face="Arial, Helvetica, sans-serif">Frequent trips</font></li>
+   <li><font size="2" face="Arial, Helvetica, sans-serif">Credit card information, including credit card numbers and expiration dates</font></li>
+</ul>
 <hr noshade="" size="1">
 
 <h4><font face="Arial">Policy Changes</font></h4>
@@ -166,12 +232,12 @@ a notice of the change on this page.</font></p>
 visit <a href="/help/luvbook.html">Contact SWA</a> for information on how to contact us.</font></p>
 
 <hr noshade="" size="1">
-<p><font face="Arial, Helvetica, sans-serif" size="1">Updated: November 21, 2002</font></p>
+<p><font face="Arial, Helvetica, sans-serif" size="1">Updated: September 24, 2004</font></p>
 <p>&nbsp;
 </p>
 
 
-    </td>
+   </td>
   </tr>
 </tbody></table>
 <br>
@@ -192,10 +258,13 @@ visit <a href="/help/luvbook.html">Contact SWA</a> for information on how to con
       <a href="/rapid_rewards/">Rapid Rewards</a> | 
       <a href="/about_swa/">About SWA</a><br>
       <a href="/cgi-bin/selectFlight">Flight Status</a> | 
-      <a href="/ctm/">Travel Managers</a> | 
       <a href="/email/">E-Mail Updates</a> | 
       <a href="/about_swa/routemap.html">Southwest Cities</a> | 
-      <a href="/about_swa/press/prindex.html">Press Room</a><br>
+      <a href="/about_swa/press/prindex.html">Press Room</a> | 
+      <a href="/about_swa/financials/investor_relations_index.html">Investor Relations</a> | 
+      <a href="/careers/">Careers</a><br>
+      <a href="http://www.swavacations.com/" target="_blank">SWA Vacations</a> | 
+      <a href="/help/">Help</a> | 
       <a href="/help/search.html">Search</a> | 
       <a href="/about_swa/terms_and_con.html">Terms &amp; Conditions</a> | 
       <a href="/traveler_info/privacy_policy.html">Privacy Policy &amp; Security</a></span></td>
